--- a/landingPage/src/pages/home.css
+++ b/landingPage/src/pages/home.css
@@ -1,4 +1,18 @@
-.container {
+/* .container {
     background-image: url('../img/handImg.jpg');
     background-size: cover;
+} */
+
+
+.main {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
 }
+
+video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+}
+  
